--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
+        "malzariey/filament-daterangepicker-filter": "^3.2",
         "ysfkaya/filament-phone-input": "^3.1"
     },
     "require-dev": {
