--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "malzariey/filament-daterangepicker-filter": "^3.2",
+        "pelmered/filament-money-field": "^1.4",
         "ysfkaya/filament-phone-input": "^3.1"
     },
     "require-dev": {
