--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     },
     "devDependencies": {
         "@prettier/plugin-php": "^0.22.4",
+        "@tailwindcss/forms": "^0.5.10",
+        "@tailwindcss/typography": "^0.5.16",
         "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.4.47",
+        "postcss": "^8.5.3",
+        "postcss-nesting": "^13.0.1",
         "prettier": "^3.5.2",
         "prettier-plugin-tailwindcss": "^0.6.11",
-        "tailwindcss": "^3.4.13",
+        "tailwindcss": "^3.4.17",
         "vite": "^6.0.11"
     },
     "dependencies": {
