--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,16 @@
         "ext-intl": "*",
         "codeat3/blade-google-material-design-icons": "^1.19",
         "filament/filament": "^3.2",
-        "filament/spatie-laravel-translatable-plugin": "^3.3",
+        "filament/spatie-laravel-settings-plugin": "^3.2",
+        "filament/spatie-laravel-translatable-plugin": "^3.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "malzariey/filament-daterangepicker-filter": "^3.2",
         "netflie/whatsapp-cloud-api": "^2.2",
+        "outerweb/filament-translatable-fields": "^2.1",
         "pelmered/filament-money-field": "^1.4",
+        "spatie/laravel-settings": "^3.4",
         "ysfkaya/filament-phone-input": "^3.1"
     },
     "require-dev": {
