--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,9 @@
         "pestphp/pest-plugin-laravel": "^3.1"
     },
     "autoload": {
+        "files": [
+            "app/Http/Helpers/url.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
