--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "outerweb/filament-translatable-fields": "^2.1",
         "pelmered/filament-money-field": "^1.4",
         "spatie/laravel-settings": "^3.4",
+        "stripe/stripe-php": "^17.2",
         "ysfkaya/filament-phone-input": "^3.1"
     },
     "require-dev": {
