--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "awcodes/filament-table-repeater": "^3.1",
         "bezhansalleh/filament-shield": "^3.3",
         "codeat3/blade-google-material-design-icons": "^1.19",
+        "deligoez/laravel-model-hashid": "^3.1",
         "elegantly/laravel-invoices": "^4.3",
         "filament/filament": "^3.2",
         "filament/spatie-laravel-settings-plugin": "^3.2",
